--- a/test/ham_2.html
+++ b/test/ham_2.html
@@ -290,8 +290,7 @@
     }
 
     function practice_Function_2_Bai_Finish() {
-        document.write();
-        alert("Bài tập của em đã kết thúc || Xin cảm ơn");
+        document.write("Bài tập của em đã kết thúc || Xin cảm ơn");
     }
 
 </script>
