--- a/test/ham_2.html
+++ b/test/ham_2.html
@@ -32,18 +32,18 @@
     </style>
 </head>
 <body>
-<h1  style="font-size: 50px;text-align: center">*** Bài tập hàm 2 ***</h1>
-<h1>Hàm kiểm tra số nguyên tố</h1>
+<h1  style="font-size: 50px;text-align: center; color: red">*** BÀI TẬP HÀM 2 ***</h1>
+<h1>HÀM KIỂM TRA SỐ NGUYÊN TỐ</h1>
 <h2>Đề: kiểm tra xem một số nguyên bất kỳ có phải là số nguyên tố hay không. Sử dụng phương thức này để tìm tất cả các số nguyên tố nhỏ hơn 10000.</h2>
  <button class="chinhsua" type="button" onclick="check_Prime_Number()">Check</button>
 <hr>
-<h1>Chuyển đổi giữa feet và meters</h1>
+<h1>CHUYỂN ĐỔI GIỮA FEET VÀ METERS</h1>
 <h2>Đề : Xây dựng hai phương thức sau - Chuyển đổi từ feet sang meters và Chuyển đổi từ meters sang feet</h2>
 <button class="chinhsua2" type="button" onclick="convert_Between_Feet_To_Meters()">convert to meters</button>
 <button class="chinhsua2" type="button" onclick="convert_Between_Meters_To_Feet()">convert to feet</button>
 
 <hr>
-<h1>Luyện tập tạo và sử dụng hàm 01</h1>
+<h1>LUYỆN TẬP TẠO VÀ SỬ DỤNG HÀM 01</h1>
 <h2>Bài 1: Tạo hàm alertMessage() hiển thị hộp thoại chứa chuỗi  "Xin chao". Gọi hàm từ trong phần body của trang web.</h2>
 <h2>Bài 2: Tạo hàm nhận vào một đối số dạng số, tăng giá trị đối số đó lên 1 và trả lại giá trị cho lời gọi hàm. Gọi hàm từ trong phần body của trang web và hiển thị kết quả lên màn hình.</h2>
 <h2>Bài 3: Tạo hàm nhận vào hai tham số. Nếu giá trị của tham số thứ nhất lớn hơn tham số thứ hai, hiển thị hộp thoại thông báo cho người dùng. Nếu giá trị của tham số thứ nhất nhỏ hơn hoặc bằng tham số thứ hai, trả về tổng của hai tham số.</h2>
@@ -55,7 +55,7 @@
 <button class="chinhsua3" type="button" onclick="practice_Function_1_Bai_4()">Bài 4</button>
 <button class="chinhsua3" type="button" onclick="practice_Function_1_Bai_5()">Bài 5</button>
 <hr>
-<h1> Luyện tập tạo và sử dụng hàm 02</h1>
+<h1> LUYỆN TẬP TẠO VÀ SỬ DỤNG HÀM 02</h1>
 <h2>Bài 1: Viết hàm tính bình phương của một số bất kỳ được đưa vào. Gọi hàm vừa xây dựng được.</h2>
 <h2>Bài 2: Viết hàm tính diện tích, hàm tính chu vi hình tròn. Gọi hàm vừa xây dựng được</h2>
 <h2>Bài 3: Viết hàm tính diện tích, hàm tính chu vi hình tròn. Gọi hàm vừa xây dựng được</h2>
