--- a/test/ham_2.html
+++ b/test/ham_2.html
@@ -11,21 +11,21 @@
             width: 150px;
             height: 50px;
             font-size: 20px;
-            border-color: red;
+            border-color: lawngreen;
             border-width: 5px;
         }
         .chinhsua2 {
             width: 200px;
             height: 50px;
             font-size: 20px;
-            border-color: red;
+            border-color: lawngreen;
             border-width: 5px;
         }
         .chinhsua3 {
             width: 130px;
             height: 50px;
             font-size: 20px;
-            border-color: red;
+            border-color: lawngreen;
             border-width: 5px;
         }
 
