--- a/test/doing_Again_Case_Study.html
+++ b/test/doing_Again_Case_Study.html
@@ -53,18 +53,19 @@
 <h1 class="tieuDeCuaTungPhan">PART 3: YÊU CẦU 3 ( MẢNG VÀ LOOP )</h1>
 <h2>Bài 1: Cho mảng a chỉ chứa các số nguyên</h2>
 <h2>Xây dựng mảng b là prefix sums của mảng a cụ thể theo công thức:</h2>
-<h2>b[0]   = a[0]</h2>
-<h2>b[1]   = a[0] + a[1]</h2>
-<h2>b[2]   = a[0] + a[1] + a[2]</h2>
+<h2>b[0] = a[0]</h2>
+<h2>b[1] = a[0] + a[1]</h2>
+<h2>b[2] = a[0] + a[1] + a[2]</h2>
 <h2>...</h2>
 <h2>b[n - 1] = a[0] + a[1] + ... + a[n - 1]</h2>
 <h2>với n là độ dài của mảng a.</h2>
 <h2>Ví dụ: Cho a = [1, 2, 3], thì kết quả prefixSums(a) = [1, 3, 6].</h2>
 <h2>Mảng b được tạo ra: [1, 1 + 2, 1 + 2 + 3] = [1, 3, 6]</h2>
 <button type="button" onclick="part_3_Case_Study_Bai_1()">Bài 1</button>
-<h2>Bài 2: Cho 2 mảng A và B chứa số nguyên. Tìm ra một mảng đã được sắp xếp chứa các phần tử xuất hiện trong mảng B nhưng lại không xuất hiện A</h2>
+<h2>Bài 2: Cho 2 mảng A và B chứa số nguyên. Tìm ra một mảng đã được sắp xếp chứa các phần tử xuất hiện trong mảng B
+    nhưng lại không xuất hiện A</h2>
 <h2>Chú ý các phần tử giống nhau chỉ tính là 1 lần xuất hiện</h2>
-<h2>Ví dụ:  A=[7,2,5,3,5,3] và B=[7,2,5,4,6,3,5,3] thì kết quả missingValue(A, B) = [4, 6]</h2>
+<h2>Ví dụ: A=[7,2,5,3,5,3] và B=[7,2,5,4,6,3,5,3] thì kết quả missingValue(A, B) = [4, 6]</h2>
 <button type="button" onclick="part_3_Case_Study_Bai_2()">Bài 2</button>
 <hr>
 <script>
@@ -231,18 +232,42 @@
     }
 
     function part_3_Case_Study_Bai_1() {
-
-    }
-
-    function part_3_Case_Study_Bai_2() {
         let n = +prompt("Nhập vào đây số phần tử có trong mảng ");
         let arr_a = [];
         let arr_b = [];
-        for (let i = 0; i < n ; i++) {
-            let number = +prompt("Nhập vào đây phần tử thứ " + ( i + 1) + "của mảng a" );
-            arr[i] = number;
+        let push = 0;
+        for (let i = 0; i < n; i++) {
+            arr_a[i] = +prompt("Nhập vào đây phần tử thứ " + (i + 1) + "của mảng a");
         }
-        
+        for (let i = 0; i < n; i++) {
+            push += arr_a [i]
+            arr_b[i] = push;
+        }
+        alert("Prefix sums của mảng a là : " + arr_b);
+    }
+
+    function part_3_Case_Study_Bai_2() {
+        let n_a = +prompt("Nhập vào đây số phần tử của mảng a");
+        let arr_a = [];
+        let n_b = +prompt("Nhập vào đây số phần tử của mảng b");
+        let arr_b = [];
+        let missing_Value = "";
+        for (let i = 0; i < n_a ; i++) {
+            arr_a[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i+1) + "của mảng a :");
+        }
+        for (let i = 0; i < n_b; i++) {
+            arr_b[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i+1) + "của mảng b :");
+        }
+        if (n_a > n_b) {
+            for (let i = 0; i < n_b ; i++) {
+                for (let j = 0; j < n_a ; j++) {
+                  if (arr_b[i] !== arr_a[j]) {
+                      missing_Value += arr_a[j];
+                  }
+                  if (arr_a[])
+                }
+            }
+        }
     }
 
 </script>
