--- a/test/doing_Again_Case_Study.html
+++ b/test/doing_Again_Case_Study.html
@@ -284,22 +284,40 @@
 
 
     // thử phần 3 lần 2
-    // function part_3_Case_Study_Bai_2() {
-    //     let n_a = 6;
-    //     let n_b = 8;
-    //     let arr_a = [7,2,5,3,5,3];
-    //     let arr_b = [7,2,5,4,6,3,5,3];
-    //     let missing_Value = "";
-    //     for (let i = 0; i < n_b; i++) {
-    //         for (let j = 0; j < n_a ; j++) {
-    //             if (arr_b[i] === arr_a[j] ){
-    //                 continue;
-    //             }
-    //
-    //         }
-    //     }
-    //     alert(missing_Value);
-    // }
+    function part_3_Case_Study_Bai_2() {
+        // let n_a = 6;
+        // let n_b = 8;
+        // let arr_a = [7,2,5,3,5,3];
+        // let arr_b = [7,2,5,4,6,9,8,9,7,2,5,3,5,3];
+        let n_a = +prompt("Nhập vào đây số phần tử của mảng a");
+        let arr_a = [];
+        let n_b = +prompt("Nhập vào đây số phần tử của mảng b");
+        let arr_b = [];
+        for (let i = 0; i < n_a; i++) {
+            arr_a[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i + 1) + "của mảng a :");
+        }
+        for (let i = 0; i < n_b; i++) {
+            arr_b[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i + 1) + "của mảng b :");
+        }
+        let missing_Value = "";
+        let a = [];
+        let c = 1;
+        for (let i = 0; i < n_b; i++) {
+            for (let j = 0; j < n_a ; j++) {
+                if (arr_b[i] === arr_a[j]){
+                    for (let k = 0; k < c; k++) {
+                        a[k] = arr_b[i];
+                    }
+                }
+            }
+            if (a.length === 0 ) {
+                missing_Value += arr_b[i] + ", ";
+            }else {
+                a = [];
+            }
+        }
+        alert("Prefix Sums [ A , B ] = " + missing_Value);
+    }
 
 </script>
 </body>
